archive/flux/security/vaultwarden/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: security
  labels:
    route.scope: external
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames:
    - vaultwarden.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /notifications/hub/negotiate
      backendRefs:
        - name: vaultwarden
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /notifications/hub
      backendRefs:
        - name: vaultwarden
          port: 3012
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vaultwarden
          port: 80
